--- a/Dockerfile-tx-bot
+++ b/Dockerfile-tx-bot
@@ -1,16 +1,21 @@
 # Build a docker image executing:
 #   $ docker build -t tx-bot -f Dockerfile-tx-bot .
-
-FROM ubuntu:14.04
-
+# docker run -it -e GITHUB_TOKEN=### -e ORGANIZATION= -e TRANSIFEX_TEAM= -e TRANSIFEX_USER= -e TRANSIFEX_PASSWORD= tx-bot2 tx-bot
+#    /bin/sh -c "PYTHONPATH=/root/mt python -m tools.tx_pull -o ${ORGANIZATION}"
+#
+#FROM ubuntu:14.04
+FROM tx-bot
 MAINTAINER Moises Lopez <moylop260@vauxoo.com>
 
-ENV MT_DIR /root/mt
+#ENV MT_DIR /root/mt
 ADD ./tools ${MT_DIR}/tools 
 ADD ./requirements.txt ${MT_DIR}/mt_requirements.txt
+#ENV PYTHONPATH ${PYTHONPATH}:${MT_DIR}
 
-RUN apt-get update
-RUN apt-get install -y build-essential python-dev python-pip \
-    && pip install --upgrade pip
-RUN pip install -r ${MT_DIR}/mt_requirements.txt
+#RUN apt-get update
+#RUN apt-get install -y build-essential python-dev python-pip \
+#    && pip install --upgrade pip
+#RUN pip install -r ${MT_DIR}/mt_requirements.txt
+
+# ENTRYPOINT ["python -m tools.tx_pull -o ${ORGANIZATION}"]
 
