--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,13 @@ python:
     - "2.7"
 
 install:
-    - pip install coveralls flake8 unittest2
+    - pip install coveralls flake8
     - pip install -r requirements.txt
 
 script:
     - python setup.py flake8
     - coverage run setup.py test
     - python setup.py install
-    - coverage run tests/test_autopep8_extended.py
 
 after_success:
   coveralls
